force-app/main/default/objects/Mail__c/fields/Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value__c</fullName>
    <label>Insurance Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>