force-app/main/default/objects/Mail__c/listViews/Insurance_Approvers_Mail.listView-meta.xml
<ListView>
    <fullName>Insurance_Approvers_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Insurance Approvers</label>
    <queue>Insurance_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>